crates/cli/src/snapshots/klyv__test__aaaa_struct_a_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
use std::str::FromStr;
/// Doc about AaaaStructA
#[derive(Clone, Debug)]
pub struct AaaaStructA;
