crates/cli/src/snapshots/klyv__test__aaaastructa_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
/// Doc about AaaaStructA
#[derive(Clone, Debug)]
pub struct AaaaStructA;
