crates/cli/src/snapshots/klyv__test__ab_astruct_a_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Doc about AbAStructA
#[derive(Clone, Debug)]
pub struct AbAStructA<T> {
    /// Doc about phantom
    phantom: PhantomData<T>,
}
