crates/cli/src/snapshots/klyv__test__d2_a_mixed_content.snap
---
source: crates/cli/src/test.rs
expression: content
---
/// Doc about global gen magic
pub fn global_gen_magic<T>(magic: T) -> T {
    magic
}
