crates/cli/src/snapshots/klyv__test__d2_b_global_magic.snap
---
source: crates/cli/src/test.rs
expression: content
---
/// Global magic
pub fn global_magic() -> u8 {
    237
}
