crates/cli/src/snapshots/klyv__test__impl_method_spacing_my_enum_file.snap
---
source: crates/cli/src/test.rs
expression: enum_content
---
use crate::prelude::*;

pub enum MyEnum {
    MyStruct(MyStruct),
    Other,
}

impl MyEnum {
    fn magic_self(&self) -> u8 {
        42
    }

    fn magic_mut_self(&mut self) -> u8 {
        42
    }

    fn magic() -> u8 {
        42
    }
}
