crates/cli/src/snapshots/klyv__test__impl_method_spacing_my_struct_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

pub struct MyStruct {
    pub field1: i32,
    pub field2: String,
}

impl MyStruct {
    pub fn new(field1: i32, field2: String) -> Self {
        MyStruct { field1, field2 }
    }

    pub fn display(&self) {
        println!("MyStruct - field1: {}, field2: {}", self.field1, self.field2);
    }
}

impl MyTrait for MyStruct {
    fn my_method(&self) {
        println!("MyTrait method called on MyStruct with field1: {}", self.field1);
    }
}
